examples/negative/modules/kind_over_builtin_theory.kai
# Negative fixture: a user kind must be classified by an open catalog
# theory (`AbelianGroup`, ...). The builtin theories' engines are the
# compiler core itself, and they classify only the language's own kinds.

kind Foo : EffectRow with foo

fn main() : Int = 0
